# M100_DTU_ROS

./: .gitignore  Installation.md  README.md
dji_sdk/include/dji_sdk/: dji_sdk_node.h
dji_sdk/launch/: check_battery.launch  dji_sdk_node.launch  sdk_joy.launch
dji_sdk/scripts/: correct_imu.py  dji_m100_check_battery.py
dji_sdk/src/modules/: dji_sdk_node.cpp  dji_sdk_node_control.cpp
dtu_controller/: CMakeLists.txt  package.xml
dtu_controller/include/: ContactController.h  GuidanceOdometry.h  PIDController.h  contact_controller_node.h  demo_joy_rpyrate_zvel.h  general_functions.h  guidanceOdometry.h  joy_roll_thrust_controller_node.h  pid.h  position_observer_node.h  rpy_position_control_node.h  type_defines.h  xy_position_control_node.h
dtu_controller/launch/: arducam.launch  autonomous_wall_touch.launch  basic_control_mission.launch  bridge_manual_test.launch  contact_controller_simulation.launch  contact_controller_w_rod_test.launch  gps_only_sim_test.launch  inspectdrone_demo.launch  joy_touch_w_sensors.launch  joy_wall_touch_test.launch  manual_velocity.launch  no_drone_simulation.launch  ransac_laser.launch  robot_localization.launch  robot_localization_rpy_test.launch  rpy_controller_test.launch  sdk_joy.launch  simulated_autonomous_wall_touch.launch  simulated_inspectdrone_demo.launch  simulation_contact_controller_w_rod_test.launch  simulation_gazebo_matlab.launch  simulation_switch_control.launch  simulation_wall_visual_servoing.launch  switch_control_test.launch  visual_tracking_test.launch  wall_and_camera_test.launch  wall_and_tracker_test.launch  wall_position_test.launch
dtu_controller/missions/: autonomous_wall_touch.cpp  basic_control_mission.cpp  inspectdrone_demo.cpp  manual_bridge_flight.cpp  switch_on_controller_test.cpp  visual_tracking_test.cpp
dtu_controller/notes/: terminal_commands.txt
dtu_controller/parameters/: observer_params.yaml  rl_rpy_position_controller.yaml  rpy_controller_pids.yaml  simple_test.yaml  x_y_zvel_yawrate_pids.yaml
dtu_controller/scripts/: odo_2_twist.py  pose2tf.py  quat_2_rpy.py  ransac_laser.py  ransac_laser_w_subscriber.py  ransac_laser_w_subscriber_test1.py  ransac_laser_w_subscriber_test2.py  simulated_control_authority.py  utilities.py  velocity_control.py  wallPositionEstimator.py
dtu_controller/src/: ContactController.cpp  GuidanceOdometry.cpp  PIDController.cpp  contactController_w_rod_test_node.cpp  contact_controller_node.cpp  demo_joy_rpyrate_zvel.cpp  general_functions.cpp  guidanceOdometry.cpp  joy_roll_thrust_controller_node.cpp  pid.cpp  position_observer_node.cpp  robot_localization_rpy_position.cpp  rodValueReader.ino  rpy_position_control_node.cpp  xy_position_control_node.cpp
dtu_controller/src/rodValueReader/: rodValueReader.ino
guidance_uart_node/: CMakeLists.txt  package.xml
guidance_uart_node/include/: serial.h
guidance_uart_node/src/: main.cpp  protocal_uart_sdk.cpp  serial.cpp
hku_m100_description/: README.md
hku_m100_description/urdf/: hku_m100_base_with_gimbal.urdf.xacro  hku_m100_base_with_primesense.urdf.xacro  hokuyo_w_camera.urdf.xacro  solo_hokuyo.urdf.xacro
hku_m100_description/urdf/primesense/: primesense_camera.gazebo.xacro  primesense_camera.urdf.xacro
hku_m100_gazebo/: CMakeLists.txt  README.md
hku_m100_gazebo/launch/: M100_WORLD_REMAINS.TXT  empty_world_with_tags.launch  laser_testing.launch  spawn_hku_m100.launch  start.launch  wall_simulation.launch
hku_m100_gazebo/models/tall_pillar/: model.config  model.sdf
hku_m100_gazebo/models/tall_pillar/scripts/: repeated.material
hku_m100_gazebo/models/wall/: model.config  model.sdf
hku_m100_gazebo/models/wall/scripts/: repeated.material
hku_m100_gazebo/scripts/: simple_joy.py
hku_m100_gazebo/src/: hku_m100_pcsim_gazebo_bridge.cpp  m100_sim_bridge.cpp
hku_m100_gazebo/worlds/: bridge_structures.world  vehicle_with_drone.world  world_w_wall.world  world_w_wall_staight.world
visual_tracker_w_gui/: CMakeLists.txt  README.md  package.xml
visual_tracker_w_gui/docs/: How to use.docx
visual_tracker_w_gui/launch/: both.launch  gui.launch  tracker.launch
visual_tracker_w_gui/scripts/: csrt_tracker.py  lt_tracker.py  visual_gui.py  visual_gui_v2.py
